<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_bg_white_border_shape"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_color_layout"
                style="@style/VerticalLinearLayout"
                android:baselineAligned="false">

                <LinearLayout
                    style="@style/HorizontalLinearLayout"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:baselineAligned="false">

                    <TextView
                        android:id="@+id/tv_data_title"
                        style="@style/WhiteCellTextValue"
                        android:textColor="@color/blue"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/na"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_total_count"
                        style="@style/WhiteCellTextValue"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/blue"
                        android:text="@string/na"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    style="@style/HorizontalLinearLayout"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/blue_clock" />

                    <TextView
                        android:id="@+id/tv_date_time"
                        style="@style/WhiteCellTextLabel"
                        android:textColor="@color/blue"
                        android:layout_marginStart="10dp"
                        android:text="@string/na" />
                </LinearLayout>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>
            <LinearLayout
                style="@style/HorizontalLinearLayout"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:minHeight="90dp">

                <LinearLayout
                    style="@style/VerticalLinearLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="90dp">

                    <TextView
                        android:id="@+id/tv_home_loan_value"
                        style="@style/CellTextValue"
                        android:layout_width="wrap_content"
                        android:text="@string/na"
                        android:textColor="@color/yello"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_home_loan_label"
                        style="@style/CellTextValue"
                        android:layout_width="wrap_content"
                        android:text="@string/home_loan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/yello" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
                <LinearLayout
                    style="@style/VerticalLinearLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="90dp">

                    <TextView
                        android:id="@+id/tv_loan_against_property_value"
                        style="@style/CellTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/na"
                        android:textColor="@color/icon_green"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_loan_against_property_label"
                        style="@style/CellTextValue"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/loan_against_property"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/icon_green" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
                <LinearLayout
                    style="@style/VerticalLinearLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="90dp">

                    <TextView
                        android:id="@+id/tv_balance_transfer_value"
                        style="@style/CellTextValue"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/na"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_balance_transfer_label"
                        style="@style/CellTextValue"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/balance_transfer"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/red" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>