<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="7dp"
                card_view:cardElevation="7dp"
                card_view:cardUseCompatPadding="true"
                card_view:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="1dp"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_color_layout"
                        style="@style/VerticalLinearLayout"
                        android:background="@color/red"
                        android:baselineAligned="false">

                        <LinearLayout
                            style="@style/HorizontalLinearLayout"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false">

                            <TextView
                                android:id="@+id/tv_data_title"
                                style="@style/WhiteCellTextValue"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/na"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_total_count"
                                style="@style/WhiteCellTextValue"
                                android:layout_marginEnd="10dp"
                                android:text="@string/na"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            style="@style/HorizontalLinearLayout"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/clock_outline" />

                            <TextView
                                android:id="@+id/tv_date_time"
                                style="@style/WhiteCellTextLabel"
                                android:layout_marginStart="10dp"
                                android:text="@string/na" />
                        </LinearLayout>

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/chart"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:nestedScrollingEnabled="false" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/HorizontalLinearLayout"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:minHeight="90dp">

                        <LinearLayout
                            style="@style/VerticalLinearLayout"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/cell_shape"
                            android:gravity="center"
                            android:minHeight="90dp">

                            <TextView
                                android:id="@+id/tv_home_loan_value"
                                style="@style/CellTextValue"
                                android:layout_width="wrap_content"
                                android:text="@string/na"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_home_loan_label"
                                style="@style/CellTextValue"
                                android:layout_width="wrap_content"
                                android:text="@string/home_loan" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/VerticalLinearLayout"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/cell_shape"
                            android:gravity="center"
                            android:minHeight="90dp">

                            <TextView
                                android:id="@+id/tv_loan_against_property_value"
                                style="@style/CellTextValue"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:text="@string/na"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_loan_against_property_label"
                                style="@style/CellTextValue"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:text="@string/loan_against_property" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/VerticalLinearLayout"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minHeight="90dp">

                            <TextView
                                android:id="@+id/tv_balance_transfer_value"
                                style="@style/CellTextValue"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:text="@string/na"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_balance_transfer_label"
                                style="@style/CellTextValue"
                                android:layout_width="wrap_content"
                                android:gravity="center"
                                android:text="@string/balance_transfer" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>